logs/cloudooo.handler.imagemagick.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/WSGIUtils-0.7.egg-info'...
Listing './lib/python3.5/site-packages/cloudooo'...
Listing './lib/python3.5/site-packages/cloudooo/bin'...
Compiling './lib/python3.5/site-packages/cloudooo/bin/cloudooo_tester.py'...
***   File "./lib/python3.5/site-packages/cloudooo/bin/cloudooo_tester.py", line 47
    except GetoptError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudooo/bin/echo_cloudooo_conf.py'...
***   File "./lib/python3.5/site-packages/cloudooo/bin/echo_cloudooo_conf.py", line 9
    print open(cloudooo_conf_path).read()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudooo/handler'...
Listing './lib/python3.5/site-packages/cloudooo/handler/imagemagick'...
Listing './lib/python3.5/site-packages/cloudooo/handler/imagemagick/tests'...
Listing './lib/python3.5/site-packages/cloudooo/handler/tests'...
Listing './lib/python3.5/site-packages/cloudooo/interfaces'...
Compiling './lib/python3.5/site-packages/cloudooo/manager.py'...
***   File "./lib/python3.5/site-packages/cloudooo/manager.py", line 197
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudooo/samples'...
Listing './lib/python3.5/site-packages/cloudooo/utils'...
Listing './lib/python3.5/site-packages/cloudooo-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/cloudooo.handler.imagemagick-0.1.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/python_magic-0.4.15.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wsgiutils'...
Compiling './lib/python3.5/site-packages/wsgiutils/SessionClient.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/SessionClient.py", line 126
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiutils/SessionServer.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/SessionServer.py", line 58
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiutils/wsgiAdaptor.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/wsgiAdaptor.py", line 249
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiutils/wsgiServer.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/wsgiServer.py", line 135
    except socket.error, socketErr:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
